# aeo-bench2

./: .gitignore  AgentBeats Blogs - 2025.Fall.md  README.md  context.md  gradescope_answers.txt  green_agent_gradescope.md  main.py  nginx.conf  proxy.py  pyproject.toml  run.sh  scratch.md  start_all.sh  start_green.sh  start_ngrok.sh  start_proxy.sh  start_white.sh
green/: __init__.py  agent.py  agent_card.toml  run.sh
resources/test_repos/art_github/: metadata.json
resources/test_repos/calculate_age/: metadata.json
resources/test_repos/countdown_timer/: metadata.json  timer.py
resources/test_repos/decimal_binary_converter/: metadata.json
resources/test_repos/env_loader/: dotenv_loader.py  metadata.json
resources/test_repos/language_translator/: metadata.json
resources/test_repos/number_guessing_game/: metadata.json
resources/test_repos/password_generator/: metadata.json  password_gen.py
resources/test_repos/progress_bar/: metadata.json  progress.py
resources/test_repos/qrcode_generator/: metadata.json  qr_generator.py
resources/test_repos/slugify_text/: metadata.json  slugify.py
resources/test_repos/spell_checker/: metadata.json
resources/test_repos/weather_fetcher/: metadata.json
src/green_agent/: agent.py
src/my_util/: my_a2a.py
src/white_agent/: agent.py
submission/: gradescope_answers.txt  green_agent_gradescope.md  white_agent_answers.txt  white_agent_gradescope.md  white_agent_report.md
white/: __init__.py  agent.py  agent_card.toml  run.sh
white2/: __init__.py  agent.py  agent_card.toml  run.sh
(+21 files in other folders)
